src/OpenCvSharpExtern/imgproc.h

CVAPI(ExceptionStatus) imgproc_fitEllipseDirect_Point2f(cv::Point2f* points, int pointsLength, interop::RotatedRect* returnValue)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
    *returnValue = c(cv::fitEllipseDirect(pointsVec));
    });
}
CVAPI(ExceptionStatus) imgproc_fitLine_InputArray(interop::InputArrayProxy points, interop::OutputArrayProxy line,
                                       int distType, double param, double reps, double aeps)
{
    return cvTry([&] {
        cv::fitLine(InProxy(points), OutProxy(line), distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) imgproc_fitLine_Point(cv::Point *points, int pointsLength, float *line, int distType,
                                  double param, double reps, double aeps)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
    cv::Mat_<float> lineVec(4, 1, line);
    cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) imgproc_fitLine_Point2f(cv::Point2f *points, int pointsLength, float *line, int distType,
                                    double param, double reps, double aeps)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
    cv::Mat_<float> lineVec(4, 1, line);
    cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) imgproc_fitLine_Point3i(cv::Point3i *points, int pointsLength, float *line, int distType,
                                    double param, double reps, double aeps)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point3i> pointsVec(pointsLength, 1, points);
    cv::Mat_<float> lineVec(6, 1, line);
    cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) imgproc_fitLine_Point3f(cv::Point3f *points, int pointsLength, float *line, int distType,
                                    double param, double reps, double aeps)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point3f> pointsVec(pointsLength, 1, points);
    cv::Mat_<float> lineVec(6, 1, line);
    cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) imgproc_pointPolygonTest_InputArray(
    interop::InputArrayProxy contour, interop::Point2f pt, int measureDist, double *returnValue)
{
    return cvTry([&] {
        *returnValue = cv::pointPolygonTest(InProxy(contour), cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_pointPolygonTest_Point(
    cv::Point *contour, int contourLength, interop::Point2f pt, int measureDist, double* returnValue)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point> contourVec(contourLength, 1, contour);
    *returnValue = cv::pointPolygonTest(contourVec, cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_pointPolygonTest_Point2f(
    cv::Point2f *contour, int contourLength, interop::Point2f pt, int measureDist, double* returnValue)
{
    return cvTry([&] {
    const cv::Mat_<cv::Point2f> contourVec(contourLength, 1, contour);
    *returnValue = cv::pointPolygonTest(contourVec, cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_rotatedRectangleIntersection_OutputArray(
    interop::RotatedRect rect1, interop::RotatedRect rect2, interop::OutputArrayProxy intersectingRegion, int* returnValue)
{
    return cvTry([&] {
        *returnValue = cv::rotatedRectangleIntersection(cpp(rect1), cpp(rect2), OutProxy(intersectingRegion));
    });
}
CVAPI(ExceptionStatus) imgproc_rotatedRectangleIntersection_vector(
    interop::RotatedRect rect1, interop::RotatedRect rect2, std::vector<cv::Point2f> *intersectingRegion, int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::rotatedRectangleIntersection(cpp(rect1), cpp(rect2), *intersectingRegion);
    });
}
CVAPI(ExceptionStatus) imgproc_applyColorMap1(interop::InputArrayProxy src, interop::OutputArrayProxy dst, int colorMap)
{
    return cvTry([&] {
        cv::applyColorMap(InProxy(src), OutProxy(dst), colorMap);
    });
}
CVAPI(ExceptionStatus) imgproc_applyColorMap2(interop::InputArrayProxy src, interop::OutputArrayProxy dst, interop::InputArrayProxy userColor)
{
    return cvTry([&] {
        cv::applyColorMap(InProxy(src), OutProxy(dst), InProxy(userColor));
    });    
}
CVAPI(ExceptionStatus) imgproc_line(
    interop::InputOutputArrayProxy img, interop::Point pt1, interop::Point pt2, interop::Scalar color,
    int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::line(IoProxy(img), cpp(pt1), cpp(pt2), cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_arrowedLine(
    interop::InputOutputArrayProxy img, interop::Point pt1, interop::Point pt2, interop::Scalar color,
    int thickness, int line_type, int shift, double tipLength)
{
    return cvTry([&] {
        cv::arrowedLine(IoProxy(img), cpp(pt1), cpp(pt2), cpp(color), thickness, line_type, shift, tipLength);
    });
}
CVAPI(ExceptionStatus) imgproc_rectangle_InputOutputArray_Point(
    interop::InputOutputArrayProxy img, interop::Point pt1, interop::Point pt2,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::rectangle(IoProxy(img), cpp(pt1), cpp(pt2), cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_rectangle_InputOutputArray_Rect(
    interop::InputOutputArrayProxy img, interop::Rect rect,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::rectangle(IoProxy(img), cpp(rect), cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_rectangle_Mat_Point(
    cv::Mat* img, interop::Point pt1, interop::Point pt2,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
    cv::rectangle(*img, cpp(pt1), cpp(pt2), cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_rectangle_Mat_Rect(
    cv::Mat *img, interop::Rect rect,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
    cv::rectangle(*img, cpp(rect), cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_circle(
    interop::InputOutputArrayProxy img, interop::Point center, int radius,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::circle(IoProxy(img), cpp(center), radius, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse1(
    interop::InputOutputArrayProxy img, interop::Point center, interop::Size axes,
    double angle, double startAngle, double endAngle,
    interop::Scalar color, int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::ellipse(IoProxy(img), cpp(center), cpp(axes), angle, startAngle, endAngle, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse2(
    interop::InputOutputArrayProxy img, interop::RotatedRect box, interop::Scalar color, int thickness, int lineType)
{
    return cvTry([&] {
        cv::ellipse(IoProxy(img), cpp(box), cpp(color), thickness, lineType);
    });
}
CVAPI(ExceptionStatus) imgproc_drawMarker(
    interop::InputOutputArrayProxy img, interop::Point position, interop::Scalar color,
    int markerType, int markerSize, int thickness, int lineType)
{
    return cvTry([&] {
        cv::drawMarker(IoProxy(img), cpp(position), cpp(color), markerType, markerSize, thickness, lineType);
    });
}
CVAPI(ExceptionStatus) imgproc_fillConvexPoly_Mat(
    cv::Mat *img, cv::Point *pts, int npts, interop::Scalar color, int lineType, int shift)
{
    return cvTry([&] {
    cv::fillConvexPoly(*img, pts, npts, cpp(color), lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_fillConvexPoly_InputOutputArray(
    interop::InputOutputArrayProxy img, interop::InputArrayProxy points, interop::Scalar color, int lineType, int shift)
{
    return cvTry([&] {
        cv::fillConvexPoly(IoProxy(img), InProxy(points), cpp(color), lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_fillPoly_Mat(cv::Mat *img, const cv::Point **pts, const int *npts,
                                 int ncontours, interop::Scalar color, int lineType, int shift, interop::Point offset)
{
    return cvTry([&] {
    cv::fillPoly(*img, pts, npts, ncontours, cpp(color), lineType, shift, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_fillPoly_InputOutputArray(interop::InputOutputArrayProxy img, interop::InputArrayProxy pts,
                                              interop::Scalar color, int lineType, int shift, interop::Point offset)
{
    return cvTry([&] {
        cv::fillPoly(IoProxy(img), InProxy(pts), cpp(color), lineType, shift, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_polylines_Mat(
    cv::Mat *img, const cv::Point **pts, const int *npts,
    int ncontours, int isClosed, interop::Scalar color,
    int thickness, int lineType, int shift)
{
    return cvTry([&] {
    cv::polylines(
        *img, pts, npts, ncontours, isClosed != 0, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_polylines_InputOutputArray(
    interop::InputOutputArrayProxy img, interop::InputArrayProxy pts, int isClosed, interop::Scalar color,
    int thickness, int lineType, int shift)
{
    return cvTry([&] {
        cv::polylines(IoProxy(img), InProxy(pts), isClosed != 0, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_drawContours_vector(interop::InputOutputArrayProxy image,
                                        cv::Point **contours, int contoursSize1, int *contoursSize2,
                                        int contourIdx, interop::Scalar color, int thickness, int lineType,
                                        cv::Vec4i *hierarchy, int hiearchyLength, int maxLevel, interop::Point offset)
{
    return cvTry([&] {
        std::vector<std::vector<cv::Point> > contoursVec;
        for (auto i = 0; i < contoursSize1; i++)
        {
            std::vector<cv::Point> c1(contours[i], contours[i] + contoursSize2[i]);
            contoursVec.push_back(c1);
        }
        std::vector<cv::Vec4i> hierarchyVec;
        if (hierarchy != nullptr)
        {
            hierarchyVec = std::vector<cv::Vec4i>(hierarchy, hierarchy + hiearchyLength);
        }

        cv::drawContours(
            IoProxy(image), contoursVec, contourIdx, cpp(color), thickness, lineType, hierarchyVec, maxLevel, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_drawContours_InputArray(interop::InputOutputArrayProxy image,
                                            cv::Mat **contours, int contoursLength,
                                            int contourIdx, interop::Scalar color, int thickness, int lineType,
                                            interop::InputArrayProxy hierarchy, int maxLevel, interop::Point offset)
{
    return cvTry([&] {
        std::vector<std::vector<cv::Point> > contoursVec(contoursLength);
        for (auto i = 0; i < contoursLength; i++)
            contoursVec[i] = *contours[i];
        cv::drawContours(
            IoProxy(image), contoursVec, contourIdx, cpp(color), thickness, lineType, InProxy(hierarchy), maxLevel, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_clipLine1(interop::Size imgSize, interop::Point *pt1, interop::Point *pt2, int* returnValue)
{
    return cvTry([&] {
    auto pt1c = cpp(*pt1), pt2c = cpp(*pt2);
    const auto result = cv::clipLine(cpp(imgSize), pt1c, pt2c);
    *pt1 = c(pt1c);
    *pt2 = c(pt2c);
    *returnValue = result ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) imgproc_clipLine2(interop::Rect imgRect, interop::Point *pt1, interop::Point *pt2, int* returnValue)
{
    return cvTry([&] {
    auto pt1c = cpp(*pt1), pt2c = cpp(*pt2);
    const auto result = cv::clipLine(cpp(imgRect), pt1c, pt2c);
    *pt1 = c(pt1c);
    *pt2 = c(pt2c);
    *returnValue = result ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse2Poly_int(
    interop::Point center, interop::Size axes, int angle, int arcStart, int arcEnd,
    int delta, std::vector<cv::Point>* pts)
{
    return cvTry([&] {
    cv::ellipse2Poly(cpp(center), cpp(axes), angle, arcStart, arcEnd, delta, *pts);
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse2Poly_double(
    interop::Point2d center, interop::Size2d axes, int angle, int arcStart, int arcEnd,
    int delta, std::vector<cv::Point2d>* pts)
{
    return cvTry([&] {
    cv::ellipse2Poly(cpp(center), cpp(axes), angle, arcStart, arcEnd, delta, *pts);
    });
}
CVAPI(ExceptionStatus) imgproc_putText(interop::InputOutputArrayProxy img, const char *text, interop::Point org,
                         int fontFace, double fontScale, interop::Scalar color,
                         int thickness, int lineType, int bottomLeftOrigin)
{
    return cvTry([&] {
        cv::putText(IoProxy(img), text, cpp(org), fontFace, fontScale, cpp(color), thickness, lineType, bottomLeftOrigin != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_getTextSize(const char *text, int fontFace,
                                 double fontScale, int thickness, int *baseLine, interop::Size *returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::getTextSize(text, fontFace, fontScale, thickness, baseLine));
    });
}
CVAPI(ExceptionStatus) imgproc_getFontScaleFromHeight(
    int fontFace, int pixelHeight, int thickness, double* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getFontScaleFromHeight(fontFace, pixelHeight, thickness);
    });
}